# USACO

./: .gitignore  CMakeLists.txt  README.md  create.py  generate.py  tools.cpp  usaco  usaco.bat
algorithms/: dsu.cpp  fenwicktree.cpp  lis.cpp  mst.cpp  segtree.cpp  shortestpath.cpp  topsort.cpp  unionfind.cpp
comp/Apr21/2/: 2.cpp
comp/Dec20/genetics/: genetics.cpp
comp/Dec20/pasture/: pasture.cpp
comp/Dec20/replication/: replication.cpp
comp/Jan21/cowphabet/: cowphabet.cpp
comp/Jan21/dance/: dance.cpp
comp/Jan21/telephone/: telephone.cpp
comp/USOpen21/1/: 1.cpp
comp/USOpen21/3/: 3.cpp
practice/herding/: herding.cpp
practice/mixmilk/: mixmilk.cpp
practice/pump/: pump.cpp
practice/teleport/: teleport.cpp
programmingclub/abc/: abc.cpp  abc.java  abc.py
programmingclub/angry/: angry.java  angry.py
programmingclub/breedflip/: breedflip.cpp  breedflip.java
programmingclub/closing/: closing.java
programmingclub/lifeguards/: lifeguards.java
programmingclub/lostcow/: lostcow.java
programmingclub/moocast/: moocast.java  moocast.py
programmingclub/speeding/: speeding.java
programmingclub/teleport/: teleport.java  teleport.py
programmingclub/traffic/: traffic.java  traffic.py
programmingclub/whereami/: whereami.java  whereami.py
starleague/gold/beads/: beads.cpp  beads.out
starleague/gold/bteams/: bteams.cpp
starleague/gold/castle/: castle.cpp
starleague/gold/cowxor/: cowxor.cpp
starleague/gold/perimeter/: perimeter.cpp  perimeter.in
starleague/gold/rockers/: rockers.cpp  rockers.in
starleague/gold/times17/: times17.cpp  times17.out
starleague/gold/trough/: trough.cpp  trough.in
templates/: cpp.txt  cpp_old.txt  java.txt  java_old.txt
