cmake_minimum_required(VERSION 3.17)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
project(USACO)

add_executable(mixmilk practice/mixmilk/mixmilk.cpp)
set_target_properties(mixmilk PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/practice/mixmilk/")
add_executable(herding practice/herding/herding.cpp)
set_target_properties(herding PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/practice/herding/")
add_executable(bteams starleague/gold/bteams/bteams.cpp)
set_target_properties(bteams PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/starleague/gold/bteams/")
add_executable(beads starleague/gold/beads/beads.cpp)
set_target_properties(beads PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/starleague/gold/beads/")
add_executable(castle starleague/gold/castle/castle.cpp)
set_target_properties(castle PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/starleague/gold/castle/")
add_executable(perimeter starleague/gold/perimeter/perimeter.cpp)
set_target_properties(perimeter PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/starleague/gold/perimeter/")
add_executable(teleport practice/teleport/teleport.cpp)
set_target_properties(teleport PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/practice/teleport/")
add_executable(trough starleague/gold/trough/trough.cpp)
set_target_properties(trough PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/starleague/gold/trough/")
add_executable(times17 starleague/gold/times17/times17.cpp)
set_target_properties(times17 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/starleague/gold/times17/")
add_executable(rockers starleague/gold/rockers/rockers.cpp)
set_target_properties(rockers PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/starleague/gold/rockers/")
add_executable(cowxor starleague/gold/cowxor/cowxor.cpp)
set_target_properties(cowxor PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/starleague/gold/cowxor/")
add_executable(pump practice/pump/pump.cpp)
set_target_properties(pump PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/practice/pump/")
add_executable(topsort algorithms/topsort.cpp)
set_target_properties(topsort PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/algorithms/")
add_executable(unionfind algorithms/unionfind.cpp)
set_target_properties(unionfind PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/algorithms/")